extracted third party libs in their own repos

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,13 @@ downloader = "0.2.6"
 file-matcher = "0.6.0"
 pkg-config = "0.3"
 crossbeam = "0.8"
-shared-library-builder = { git = "https://github.com/feenkcom/shared-library-builder-rs", features = [ "cmake-library", "git-location", "tar-location", "zip-location" ] }
+shared-library-builder = { git = "https://github.com/feenkcom/shared-library-builder-rs", features = [ "git-location" ] }
 libprocess-library = { git = "https://github.com/feenkcom/libprocess.git" }
 libglutin-library = { git = "https://github.com/feenkcom/libglutin.git" }
 libgleam-library = { git = "https://github.com/feenkcom/libgleam.git" }
 libskia-library = { git = "https://github.com/feenkcom/libskia.git" }
 libsdl2-library = { git = "https://github.com/feenkcom/libsdl2.git" }
+libopenssl-library = { git = "https://github.com/feenkcom/libopenssl.git" }
+libfreetype-library = { git = "https://github.com/feenkcom/libfreetype.git" }
+libcairo-library = { git = "https://github.com/feenkcom/libcairo.git" }
+libgit2-library = { git = "https://github.com/feenkcom/libgit2.git" }
