--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rustc_version = "0.2"
 mustache = "0.9.0"
 serde = { version = "1.0", features = [ "derive" ]}
 serde_json = "1.0"
+serde_yaml = "0.8"
 url = "2.2.2"
 which = "4.1.0"
 user-error = "1.2.8"
