--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ name = "gtoolkit-vm-builder"
 path = "src/main.rs"
 
 [dependencies]
-clap = "3.0.0-beta.2"
+clap = { version = "3", features = [ "derive", "color" ] }
 fs_extra = "1.1.0"
 rustc_version = "0.2"
 mustache = "0.9.0"
