use libclipboard-library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ git_info = "^0.1.2"
 chrono = "0.4"
 shared-library-builder = { git = "https://github.com/feenkcom/shared-library-builder-rs", features = [ "git-location", "downloader" ] }
 libprocess-library = { git = "https://github.com/feenkcom/libprocess.git" }
+libclipboard-library = { git = "https://github.com/feenkcom/libclipboard.git" }
 libglutin-library = { git = "https://github.com/feenkcom/libglutin.git" }
 libwinit-library = { git = "https://github.com/feenkcom/libwinit.git" }
 libgleam-library = { git = "https://github.com/feenkcom/libgleam.git" }
