--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ libopenssl-library = { git = "https://github.com/feenkcom/libopenssl.git" }
 libfreetype-library = { git = "https://github.com/feenkcom/libfreetype.git" }
 libcairo-library = { git = "https://github.com/feenkcom/libcairo.git" }
 libgit2-library = { git = "https://github.com/feenkcom/libgit2.git" }
+libwebview-builder = { git = "https://github.com/feenkcom/libwebview.git" }
 ndk-build = "0.9"
 
 [target.'cfg(target_os = "macos")'.dependencies]
